--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html {
-  box-sizing:border-box;
+  box-sizing: border-box;
   font-family: sans-serif;
 }
 
@@ -8,14 +8,14 @@ html {
 }
 
 .img-flex {
-  dispaly: block;
+  display: block;
   width: 100%;
 }
 
 .card {
   overflow: hidden;
-  border:1px solid #ccc;
-  border-radius:0 6px 6px;
+  border: 1px solid #ccc;
+  border-radius: 0 6px 6px;
 }
 
 .card-body {
@@ -32,14 +32,14 @@ html {
 }
 
 .card-label {
-  padding: .3rem 1rem .3rem calc(1rem — 4px);
+  padding: .3rem 1rem .3rem calc(1rem - 4px);
   border-left: 4px solid green;
-  background-color:rgba(255, 255, 255, .6);
+  background-color: rgba(255, 255, 255, .6);
   position: absolute;
-  left:0;
-  top:0;
+  left: 0;
+  top: 0;
 }
 
-.card-head{
+.card-head {
   position: relative;
 }
